hphp/test/zend/bad/ext/reflection/tests/013.php
<?php
$ext = new ReflectionExtension("standard");
$funcs = $ext->getFunctions();
echo $funcs["sleep"]->getName();
?>
